# sysml-studio

./: README.md  gui-example.txt  guide.md  index.html  package-lock.json  package.json  vite.config.ts  vitest.config.ts
.github/workflows/: build-android.yml  build-desktop.yml  build-ios.yml  ci.yml
docs/: android-distribution.md  ios-testflight-setup.md  windows-code-signing.md
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: adapter.rs  lib.rs  main.rs
src-tauri/src/commands/: analysis_commands.rs  diagram_commands.rs  mod.rs  parse_commands.rs
src-tauri/src/model/: elements.rs  graph.rs  mod.rs  query.rs
src-tauri/src/parser/: mod.rs  node_visitor.rs  sysml_parser.rs
src/components/analysis/: AnalysisView.tsx
src/components/browser/: ElementBrowser.tsx  ElementDetail.tsx  ElementRow.tsx  FilterPanel.tsx
src/components/diagram/: DiagramView.tsx
src/components/dialogs/: CreateElementDialog.tsx  DeleteConfirmDialog.tsx  EditElementDialog.tsx
src/components/editor/: EditorView.tsx  ImportDialog.tsx  sysml-language.ts
src/components/layout/: AppShell.tsx  Header.tsx  TabBar.tsx
src/components/mbse/: MbseDashboard.tsx
src/components/shared/: LoadingSpinner.tsx  SearchInput.tsx  SearchSelect.tsx  TypeBadge.tsx  TypeSearchInput.tsx
src/lib/: browser-parser.ts  constants.ts  element-types.ts  filter-engine.ts  source-editor.ts  tauri-bridge.ts  view-evaluator.ts
src/stores/: filter-store.ts  model-store.ts  ui-store.ts
src/styles/: globals.css
(+4 files in other folders)
