[package]
name = "sysml-studio"
version = "0.3.0"
description = "SysML v2 Studio - Parse, Browse, and Visualize SysML Models"
authors = ["Jack Hale"]
edition = "2021"

[lib]
name = "sysml_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysml-core = { git = "https://github.com/jackhale98/sysml-cli", branch = "main" }

[profile.release]
strip = true
lto = true
codegen-units = 1
opt-level = "s"

[dev-dependencies]
tempfile = "3"
